--- a/circle.yml
+++ b/circle.yml
@@ -5,13 +5,13 @@ deployment:
   staging:
     branch: master
     codedeploy:
-      DemoApplication:
+      CodeDeployDemoApplication:
         application_root: /
         region: ap-northeast-1
         revision_location:
           revision_type: S3
           s3_location:
             bucket: chiba-app
-            key_pattern: DemoApplication-{BRANCH}-{SHORT_COMMIT}
+            key_pattern: CodeDeployDemoApplication-{BRANCH}-{SHORT_COMMIT}
         deployment_group: DemoFleet
         deployment_config: CodeDeployDefault.AllAtOnce
